--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dropzone": "^14.2.3",
     "react-rainbow-components": "^1.32.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.7",
     "tesseract.js": "^5.0.2",
     "web-vitals": "^2.1.4"
   },
